Making the same changes in regards to "Granularity" to the Capacity report api
